@@ -20,6 +20,8 @@ Revision history for DBIx::Class
         - Fix a bug in update_all() resulting in the first row receiving a
           different dataset than the subsequent ones
         - Accomodate MSAccess supporting only 'INNER JOIN' (not plain 'JOIN')
+        - InflateColumn::DateTime option datetime_undef_if_invalid no longer
+          masks missing dependency exceptions (RT#66823)
 
 0.08192 2011-05-10 04:20 (UTC)
     * Fixes
